# advent-of-code-2021

./: .gitignore  LICENSE.txt  README.md
day01/: CMakeLists.txt  README.md  vcpkg.json
day01/apps/: CMakeLists.txt  app.cpp
day01/include/: lib.hpp
day01/src/: CMakeLists.txt  lib.cpp
day01/tests/: CMakeLists.txt  testlib.cpp
day02/: CMakeLists.txt  README.md  vcpkg.json
day02/apps/: CMakeLists.txt  app.cpp
day02/include/: lib.hpp
day02/src/: CMakeLists.txt  lib.cpp
day02/tests/: CMakeLists.txt  testlib.cpp
day03/: CMakeLists.txt  README.md  vcpkg.json
day03/apps/: CMakeLists.txt  app.cpp
day03/include/: lib.hpp
day03/src/: CMakeLists.txt  lib.cpp
day03/tests/: CMakeLists.txt  testlib.cpp
day04/: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
day04/apps/: CMakeLists.txt  app.cpp
day04/include/: lib.hpp
day04/src/: CMakeLists.txt  lib.cpp
day04/tests/: CMakeLists.txt  testlib.cpp
day05/: CMakeLists.txt  README.md  vcpkg.json
day05/apps/: CMakeLists.txt  app.cpp
day05/include/: lib.hpp
day05/src/: CMakeLists.txt  lib.cpp
day05/tests/: CMakeLists.txt  testlib.cpp
day06/: CMakeLists.txt  README.md  vcpkg.json
day06/apps/: CMakeLists.txt  app.cpp
day06/include/: lib.hpp
day06/src/: CMakeLists.txt  lib.cpp
day06/tests/: CMakeLists.txt  testlib.cpp
day07/: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
day07/apps/: CMakeLists.txt  app.cpp
day07/src/: CMakeLists.txt  lib.cpp
day07/tests/: CMakeLists.txt  testlib.cpp
day08/: CMakeLists.txt  README.md  vcpkg.json
day08/apps/: CMakeLists.txt  app.cpp
day08/include/: lib.hpp
day08/src/: CMakeLists.txt  lib.cpp
day08/tests/: CMakeLists.txt  testlib.cpp
day09/: CMakeLists.txt  README.md  vcpkg.json
day09/apps/: CMakeLists.txt  app.cpp
day09/include/: lib.hpp
day09/src/: CMakeLists.txt  lib.cpp
day09/tests/: CMakeLists.txt  testlib.cpp
day10/: CMakeLists.txt  README.md  vcpkg.json
day10/apps/: CMakeLists.txt  app.cpp
day10/include/: lib.hpp
day10/src/: CMakeLists.txt  lib.cpp
day10/tests/: CMakeLists.txt  testlib.cpp
day11/: CMakeLists.txt  README.md  vcpkg.json
day11/apps/: CMakeLists.txt  app.cpp
day11/include/: lib.hpp
day11/src/: CMakeLists.txt  lib.cpp
day11/tests/: CMakeLists.txt  testlib.cpp
day12/: CMakeLists.txt  README.md  vcpkg.json
day12/apps/: CMakeLists.txt  app.cpp
day12/include/: lib.hpp
day12/src/: CMakeLists.txt  lib.cpp
day12/tests/: CMakeLists.txt  testlib.cpp
day13/: CMakeLists.txt  README.md  vcpkg.json
day13/apps/: CMakeLists.txt  app.cpp
day13/include/: lib.hpp
day13/src/: CMakeLists.txt  lib.cpp
day13/tests/: CMakeLists.txt  testlib.cpp
day14/: CMakeLists.txt  README.md  vcpkg.json
day14/apps/: CMakeLists.txt
day14/include/: lib.hpp
day14/src/: CMakeLists.txt  lib.cpp
day14/tests/: CMakeLists.txt  testlib.cpp
day15/: CMakeLists.txt  README.md  vcpkg.json
day15/apps/: CMakeLists.txt  app.cpp
day15/include/: lib.hpp
day15/src/: CMakeLists.txt  lib.cpp
day15/tests/: CMakeLists.txt  testlib.cpp
day16/: CMakeLists.txt  README.md  vcpkg.json
day16/apps/: CMakeLists.txt  app.cpp
day16/include/: lib.hpp
day16/src/: CMakeLists.txt  lib.cpp
day16/tests/: CMakeLists.txt  testlib.cpp
